--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "SET NODE_ENV=development && nodemon ./index.js",
-     "prod": "SET NODE_ENV=development && node ./index.js"
+    "prod": "SET NODE_ENV=development && node ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
