--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "uniqid": "^5.4.0"
+    "mongoose": "^8.4.4",
+    "moongoose": "^0.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
