--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "moongoose": "^0.0.1"
   },
