--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-handlebars": "^7.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "moongoose": "^0.0.1"
+    "moongoose": "^0.0.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
